# Matrix-

./: CMakeLists.txt  Makefile  README.md  matrix.cc  s21_Operations.cc  s21_matrix_oop.h
src/: makefile  s21_matrix.cpp  s21_matrix_oop.h  test.cc
src/1/: s21_matrix.cpp  s21_matrix_oop.h
